# PartiGal

./: GEMINI.md  README.md  settings.gradle.kts  silba.html
app/: build.gradle.kts
app/src/androidTest/java/com/example/partigal/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/www/: index.html
app/src/main/assets/www/css/: styles.css
app/src/main/assets/www/js/: app.js  audio-engine.js  gemini-api.js  midi-writer.js  pitch-detect.js  score-render.js  ui-manager.js
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/partigal/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/partigal/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
